package app;

public interface Pet {
    String getName();
    void setName(String name);
    void play();
}