package app;

public class Spider extends Animal {
    public Spider() {
        super(8);
        System.out.println("Saya adalah laba-laba");
    }
    public void eat() {
        System.out.println("Sedang makan");
    }
}